add study notes for design and analysis of algorithms

--- a/Design-and-Analysis-of-Algorithms/第二章.md
+++ b/Design-and-Analysis-of-Algorithms/第二章.md
@@ -121,6 +121,8 @@ $f_5(n)=\log^2 n+n^{\sqrt{2}}$
 
 首先第五个，由于$\log ^2 n < n$，因此我们知道其复杂度取决于$n^\sqrt{2}$. 是一个多项式时间的复杂度。使用极限法，我们不难得到$f_2(n) < f_1(n)$, $f_1(n)<f_3(n)$, $f_3(n) < f_5(n)$, $f_5(n)<f_4(n)$.
 
+首先第一步进行化简，显然会发现(2)可以化简为$n\log n$，很容易发现(1)的渐近增长率是高于(2)的，另外我们再看(3)，不难发现(3)表示为$n^{5/4}(\log n)^{1/2}$. 也很容易发现其渐近增长率高于(2)，因为主导权在多项式级的复杂度上，再看(5)，多项式时间级复杂度，同时$\sqrt{2}>5/4$，因此我们很容易发现(5)的复杂度是高于3的，最后再看(4)，(4)的复杂度显然是最高的。
+
 因此渐近增长率的从小到大的顺序为：$2,1,3,5,4$.
 
 ---
@@ -136,3 +138,43 @@ $f_3(n)=n^2\log n$
 $f_4(n)=2^{\log n + \log \log n}$
 
 $f_5(n)=\sqrt[10]{n}$
+
+显然我们会发现(4)的复杂度可以化简为$n\log n$. (2)可以化简为$100\log ^2 n$. 从而可以得到3>4，另外我们发现通过极限法得到5<4, 2<5, 最后主要需要判断的是1和3，通过极限法很难直接判断，因此改用取对数法，我们可以得到(1)取对数为：$\log n + n\log \log n$，(3)取对数后为：$2\log n + \log \log n$, 显然1>3. 从而最终我们可以得到渐近增长率的排名为：2<5<4<3<1.
+
+2018年秋考试题：
+
+$f_1(n)=\sqrt{n}+(\log n)^{100}$
+
+$f_2(n)=2^{\log n + \log\log n}$
+
+$f_3(n)=\log (n^{100} \times 3^n)$
+
+$f_4(n)=n^{200}+3^n$
+
+$f_5(n)=\log n^{100\log n}$
+
+$f_6(n)=100^n+n!$
+
+给出答案：5<1<3<2<4<6. 首先2，3，5都是可以进行化简的，其次发现4，6明显与其他4个不在一个级别上。因此后面的通过极限法基本就可以确定结果了。
+
+在渐近增长率比较的时候利用常见的关系式：
+
+$c < \log n<\log^2 n<n < n\log n < n^2 < n^3 < 2^n < n!$.
+
+渐近增长率比较例题3：
+
+$f_1(n)=2014 n^6 + 5n^4$
+
+$f_2(n)=n ^{2014} + 3^n$
+
+$f_3(n)=2014 \sqrt{n^{2.014}}$
+
+$f_4(n)=\log n +(2014 \log n)^3$
+
+$f_5(n)=2^n+n!+5^n$
+
+$f_6(n)=3\log (2^n) + \log \log n$
+
+$f_7(n)=2^{n\log n}+\log^n n$
+
+答案：$4<6<3<1<2<5<7$.
