--- a/Finite-Automaton-Theory/第一章.md
+++ b/Finite-Automaton-Theory/第一章.md
@@ -24,13 +24,18 @@ $A-B=\{x|x\in A \and x\notin B\}$
 
 等价关系的一个重要性质：集合$A$上的一个等价关系$R$可以将集合$A$划分为若干个不相交的子集，称为等价类。
 
-集合的递归定义与归纳证明
+##### 集合的递归定义与归纳证明
 
 首先找到定义该集合的最基本的元素，然后对于该集合中的元素使用某种组合方法对这些元素进行处理之后得到的新元素在该集合中，必须是满足上面所说的两个条件的情况下的元素才能够在集合中。
 
 
 
 #### 语言
+
+```mermaid
+graph LR
+A[字母表]--> B[字母表的克林闭包]-->C[语言]-->D[句子]
+```
 
 任意字符的非空集合就是一个字母表，最常见的字母表是大小写26个英文字母表，10个阿拉伯数字字母表，24个希腊字符字母表以及0和1的二进制字母表。
 
@@ -88,9 +93,13 @@ $$
 
 **课后习题3：给出递归定义：对于任意的$x\in \Sigma^\ast$，字符串$x$的倒序**
 
-第一种情况，如果$|x|<2$，那么$x^T=x$
+基本的思路：x的倒序 = 一个字符和剩下那串字符的倒序
 
-第二种情况，如果$|x|>1$，那么令$x=ya$，其中$y\in \Sigma^+,a\in \Sigma$, 则$x^T=ay^T$（没太懂，回头再看看）
+基线条件就是说一个单一字符的倒序就是他自己，如果$|x|<2$，那么$x^T=x$
+
+当字符串长度变长的情况下我们就考虑这个字符串由一个单一字符加一个长串，这里的a就是单一字符，y就是后续字符串每一次都看成这样递归到最后就是一个单一的字符，如果$|x|>1$，那么令$x=ya$，其中$y\in \Sigma^+,a\in \Sigma$, 则$x^T=ay^T$
+
+主要是体现递归的思想，找到基线条件和递归的条件。
 
 **课后习题4：设$\Sigma=\{0,1\}$, 请给出下面语言的形式表示**
 
@@ -113,3 +122,4 @@ $$
 所有正数第10个字符是0的串的语言：$\Sigma^9\{0\}\Sigma^\ast$
 
 所有倒数第6个字符是0的串的语言：$\Sigma^\ast\{0\}\{0,1\}^5$
+
