add study notes for CM, FAM, SP

--- a/Finite-Automaton-Theory/第二章.md
+++ b/Finite-Automaton-Theory/第二章.md
@@ -2,7 +2,7 @@
 
 ---
 
-#### 形式语言简介
+#### 例子语言
 
 一个字母表上的语言就是该字母表的任意字符串的集合。语言中的字符串称为该语言的句子。
 
@@ -100,3 +100,56 @@ A->F^A|F
 F->(E)|i
 
 （注意^运算的结合性是右结合的）
+
+标识符的语言。
+
+标识符：以字母开头的字母和/或数字的串（这里仅考虑小写字母）
+
+标识符的形成规则：单个字母就是基本的标识符，在标识符后面增加1个字母或者数字可以得到新的标识符。
+$$
+\begin{split}
+&I\to L\\
+&I\to IL\\
+&I\to ID\\
+&L\to a|b|c|d|e|f|g|h|i|j|k|l|m|n|o|p|q|r|s|t|u|v|w|x|y|z\\
+&D\to 1|2|3|4|5|6|7|8|9|0\\
+\end{split}
+$$
+按照标识符的定义来看，可以写为：
+$$
+\begin{split}
+&I\to L\\
+&I\to LS\\
+&S\to SS|L|D\\
+&L\to a|b|c|d|e|f|g|h|i|j|k|l|m|n|o|p|q|r|s|t|u|v|w|x|y|z\\
+&D\to 1|2|3|4|5|6|7|8|9|0\\
+\end{split}
+$$
+一个语言可以通过不同的产生式的组合来产生。
+
+---
+
+#### 文法与语言的关系
+
+语言：字母表上通过一定规则产生的字符串的集合；语言中的字符串称为句子。
+
+对于一类语言可以在字母表上按照句子的结构特点和构成规则定义产生该语言的**文法**。
+
+使用文法作为相应语言的有穷描述，不仅描述结构特征还能够产生这个语言的所有句子。
+
+##### 文法
+
+短语结构文法PSG的定义：文法$G$由一个四元组构成：$G=(\Sigma,V,S,P)$.
+
+$\Sigma$表示有限字符的集合，称为字母表，元素称为字母或者终结符。
+
+$V$是一个有限字符的集合，称为非终结符集合，其元素称为变量或者非终结符。（一般使用大写字母表示）
+
+$S$是一个特殊的非终结符，即$S\in V$. 称为文法的开始符号。
+
+$P$是有序偶对$(\alpha,\beta)$的集合，其中$\alpha$是集合$(\Sigma\cup V)$上的字符串（但是$\alpha$至少包含一个非终结符）；$\beta$是集合$(\Sigma\cup V)^\ast$的元素（可以是$\epsilon$）。
+
+一般来说将有序偶对$(\alpha,\beta)$记为$\alpha\to \beta$称为产生式。
+
+**推导（派生）的定义：**
+
