--- a/Stochastic-Processes-and-Applications/第一章.md
+++ b/Stochastic-Processes-and-Applications/第一章.md
@@ -174,3 +174,40 @@ $\{X>x\}=\Omega-\{X\leq x\}\in F$
 （3）$F(x)$是右连续函数，即对$\forall x\in R, F(x+0)=F(x)$
 
 **定义1.2.3** 如果$X$和$Y$是定义在同一个概率空间$(\Omega,F,P)$上的两个随机变量，称$(X,Y)$为二维随机变量。
+
+二维随机变量的“维”主要是体现在因变量分量的个数上，也就是$D\to_f R^n$.
+
+从原概率空间$(\Omega,F,P)$映射到标准概率空间$(R^n,F',P')$. 
+
+对于二维的随机变量来说：
+
+![二维随机变量定义在同一个概率空间中](/pics/2.png)
+
+找一个经典例子：
+
+假设一个试验，先抛一枚硬币，再掷一枚骰子，则这个试验的样本空间为：$\Omega=\Omega_1\times \Omega_2=\{(\omega_1,\omega_2),\omega_i\in \Omega_i,i=1,2\}$. 对于$\omega=(\omega_1,i)\in \Omega,\omega_1=H,T,i=1,2,\cdots,6$
+
+二维随机变量:
+$$
+(X(\omega),Y(\omega))=
+\begin{cases}
+(1,i) & \omega_1=T,\omega_2=i;\\
+(0,i) & \omega_1=H,\omega_2=i;
+\end{cases}
+$$
+联合分布函数的定义：
+
+设$(X,Y)$是定义在概率空间$(\Omega,F,P)$上的随机变量，对于$\forall (x,y)\in R^2$
+$$
+F(x,y)=P\{\omega:X(\omega)\leq x,Y(\omega)\leq y\}
+$$
+我们称$F(x,y)$是$(X,Y)$的联合分布函数。
+
+联合分布函数的一些性质：
+
+（1）$F(x,y)$分别对于$x,y$单调不降
+
+（2）$F(x,y)$对每一个变元右连续
+
+（3）$\lim_{x\to -\infty}F(x,y)=0$, $\lim_{y\to -\infty}F(x,y)=0$, 
+
