--- a/Combinatorial-Mathematics/第一章 排列、组合及二项式定理.md
+++ b/Combinatorial-Mathematics/第一章 排列、组合及二项式定理.md
@@ -17,6 +17,8 @@
 
 重集：$B=\{k_1\cdot a_i,k_2\cdot b_2,\cdots,k_n\cdot b_n\}$.
 
+---
+
 #### 排列问题
 
 ```mermaid
@@ -38,11 +40,11 @@ $A$的$r-$排列为$A$的$r$有序子集。
 
 **定理1.1** 对于正整数$n,r,r\leq n$, 有$P(n,r)=n!/(n-r)!$ .
 
-*推论1：*当$2\leq r \leq n$时，有$P(n,r)=nP(n-1,r-1)$.
+*推论1：*当$2\leq r \leq n$时，有<font color=red> $P(n,r)=nP(n-1,r-1)$</font>.
 
 公式证明直接展开即可，组合分析证明：首先第一个位置上可以从$n$个元素中选择一个放置，然后剩下的在$n-1$个元素中再挑选$r-1$个元素。
 
-*推论2：*当$2\leq r \leq n$时，有$P(n,r)=rP(n-1,r-1) + P(n-1,r)$.
+*推论2：*当$2\leq r \leq n$时，有<font color=red>$P(n,r)=rP(n-1,r-1) + P(n-1,r)$</font>.
 
 公式证明可以利用推论1得到，组合分析证明大致思路：将$r$分为两类，一类是必须要包含其中一个元素的情况，另一种情况是一定不包含这个元素的情况。第一种情况下我们首先在$A\backslash \{a_1\}$的情况下选取$r-1$个元素进行排列，对于上述的所有排列都可以将$a_1$放入从而得到所有一定包含$a_1$的情况，也就是$r\cdot P(n-1,r-1)$. 第二种情况就是一定不包含$a_1$的情况，直接在$n-1$个元素中进行$r$-排列即可：$P(n-1,r)$. 证毕。
 
@@ -58,7 +60,7 @@ $A$的$r-$排列为$A$的$r$有序子集。
 
 注意：将一个圆排列旋转得到的另一个圆排列视为相同的圆排列。
 
-圆排列的个数为：$P(n,r)/r=n!/(r(n-r)!)$
+圆排列的个数为：<font color=red>$P(n,r)/r=n!/(r(n-r)!)$</font>
 
 **例题：**8个人围成圆桌就餐，请问一共有多少种就坐方式？如果有两个人不愿意坐在一起又存在多少种就坐方式？
 
@@ -90,25 +92,27 @@ $A$的$r-$排列为$A$的$r$有序子集。
 
 分析这个问题也是一个重排列问题，思考首先在符号中可能出现的情况，$\{2\cdot A,1\cdot B,2\cdot C\}$；$\{2\cdot A, 0\cdot B, 3\cdot C\}$；$\{1\cdot A,1\cdot B,3\cdot C\}$. 可能出现的情况只有这三种，分别计算之后使用加法规则即可。
 
+----
+
 #### 组合
 
 **定义：**假设$A=\{a_1,a_2,\cdots ,a_n\}$是具有$n$个元素的集合，$r$是一个非负整数，从这$n$个不同的元素中取$r$个不考虑次序组合起来$r \leq n$, 称为集合$A$的$r$组合，记为$C(n,r)$.
 
 A的r-组合是A的r-无序子集。
 
-**定理：**对于$r\leq n$有$C(n,r)=P(n,r)/r!=n!/(n-r)!r!$.
+**定理：**对于$r\leq n$有<font color=red>$C(n,r)=P(n,r)/r!=n!/(n-r)!r!$</font>.
 
 一个r-组合是r!个r-排列；$C(n,r)$个r-组合就是$r!C(n,r)$个r-排序。
 
-**推论1：**$C(n,r)=C(n,n-r)$.
+**推论1：**<font color=red>$C(n,r)=C(n,n-r)$</font>.
 
-**推论2：**$C(n,r)=C(n-1,r)+C(n-1,r-1)$. 这也是Pascal公式。
+**推论2：**<font color=red>$C(n,r)=C(n-1,r)+C(n-1,r-1)$</font>. 这也是Pascal公式。
 
-<font color=red>对比一下：$P(n,r)=P(n-1,r)+r\cdot P(n-1,r-1)$</font>
+对比排列问题下的公式<font color=red>$P(n,r)=P(n-1,r)+r\cdot P(n-1,r-1)$</font>
 
 公式推导的方式可以进行直接推导，不多赘述；思考组合分析的方法，这个证明的方法与在证明排列的推论2的情况是类似的，考虑固定一个集合A中的元素，情况变为$r$个元素中包含$a_1$，另一种情况一定不包含$a_1$. 
 
-**推论3：**$C(n,r)=C(n-1,r-1)+C(n-2,r-1)+\cdots +C(r-1,r-1)$.
+**推论3：**<font color=red>$C(n,r)=C(n-1,r-1)+C(n-2,r-1)+\cdots +C(r-1,r-1)$</font>.
 
 推论3可以通过反复使用推论2得到。
 
@@ -124,7 +128,7 @@ A的r-组合是A的r-无序子集。
 
 从重集$B=\{k_1\cdot b_1,k_2\cdot b_2,\cdots ,k_n\cdot b_n\}$中选取$r$个元素不考虑次序组合起来，称为从B中取出$r$个元素的重复组合。我们记为$F(n,r)$.
 
-**定理：**$B=\{\infty\cdot b_1,\infty\cdot b_2,\cdots,\infty\cdot b_n\}$的r-组合数为$F(n,r)=C(n+r-1,r)$.
+**定理：**$B=\{\infty\cdot b_1,\infty\cdot b_2,\cdots,\infty\cdot b_n\}$的r-组合数为<font color=red>$F(n,r)=C(n+r-1,r)$</font>.
 
 *Proof.* 假设$n$个元素$b_1,b_2,\cdots,b_n$和自然数$1,2,\cdots,n$之间是1-1对应的。于是考虑的任何组合都可以看为一个r个数的组合$\{c_1,c_2,\cdots,c_r\}$.  我们可以认为各个$c_i$是按照大小次序排列的，相同的$c_i$连续地排在一起：$c_1\leq \cdots\leq c_r$排列。令$d_i=c_i+i-1,(i=1,2,\cdots,r)$，即：$d_1=c_1,d_2=c_2+1,\cdots,d_r=c_r+r-1$. 而我们又知道$c_i$可以取得的最大值为$n$，因此$d_i$可以取得的最大值为$n+r-1$，这样就可以得到集合$\{1,2,\cdots,n+r-1\}$的一个r-组合：$d_1d_2\cdots d_r,(d_1<d_2<\cdots <d_r)$，显然我们会发现对于一种$\{c_1,c_2,\cdots,c_r\}$的取法便对应一种$\{d_1,d_2,\cdots,d_r\}$的取法且一定是1-1对应的。这样看来我们就会发现，对于允许重复地从$n$个不同元素中取$r$个元素的组合数和不允许重复地从$(n+r-1)$个不同元素中取$r$个元素的组合数是相同的。
 $$
@@ -146,5 +150,257 @@ $$
 
 首先第一个问题很简单，$F(10,r)$.
 
-第二个问题从两个角度来思考：首先是考虑0和9都不出现的情况，因此重集变为$\{\infty \cdot 1,\infty \cdot 2,\cdots,\infty \cdot 8\}$, 就是8个数的重集的重复组合问题，结果可以写为：$F(8,r)$; 第二种情况是0出现一次或者9出现一次的情况，这两种情况可以看作是等价的，先在9个数的重集中重复组合$r-1$个值，然后将0或者9添加进去，结果都表示为：$F(9,r-1)$. 最后还有一种情况就是0和9均出现了一次，也就是$F(8,r-2)$，然后将0，9添加进去，最终使用加法规则可以得到结果为：$F(8,r)+2\cdot F(9,r-1)+F(8,r-2)$. 另外还存在一种思路是，无约束的条件下减去不满足条件的情况，也就是：$F(10,r)$，不满足条件的情况分为0大于2次，9大于2次，但是这种情况下我们需要加上一部分，即
+第二个问题从两个角度来思考：首先是考虑0和9都不出现的情况，因此重集变为$\{\infty \cdot 1,\infty \cdot 2,\cdots,\infty \cdot 8\}$, 就是8个数的重集的重复组合问题，结果可以写为：$F(8,r)$; 第二种情况是0出现一次或者9出现一次的情况，这两种情况可以看作是等价的，先在9个数的重集中重复组合$r-1$个值，然后将0或者9添加进去，结果都表示为：$F(9,r-1)$. 最后还有一种情况就是0和9均出现了一次，也就是$F(8,r-2)$，然后将0，9添加进去，最终使用加法规则可以得到结果为：$F(8,r)+2\cdot F(9,r-1)+F(8,r-2)$. 另外还存在一种思路是，无约束的条件下减去不满足条件的情况，也就是：$F(10,r)$，不满足条件的情况分为0大于2次，9大于2次，但是这种情况下我们需要加上一部分，即两个都大于等于2的情况，因为这个情况被剔除了两次，因此我们需要加回来一次，从而最后我们可以计算得到结果为：$F(10,r)-F(10,r-2)-F(10,r-2)+F(10,r-4)$.
 
+**例题：**求方程$x_1+x_2+\cdots+x_n=r$的非负整数解的个数。其中$r,n$均为正整数。
+
+这个问题相当于是一个重集的r-组合问题，考虑假设$b_1,b_2,\cdots,b_n$为$n$个不同的元素，那么重集$B=\{\infty \cdot b_1,\infty \cdot b_2,\cdots,\infty\cdot b_n\}$的任何一个r-组合都具有$\{x_1\cdot b_1,x_2\cdot b_2,\cdots,\cdots,x_n\cdot b_n\}$，其中$x_i(i=1,2,\cdots,n)$是非负整数且满足方程：$x_1+x_2+\cdots+x_n=r$. 所以对于这个问题来说，满足上述方程的非负整数解就相当于在这个重集$B$中进行了一次r-组合的过程，结果也就是$F(n,r)$.
+
+---
+
+#### 二项式定理
+
+**定理：** *二项式定理*：当$n$是一个正整数时，对于任意$x$和$y$都有：
+$$
+(x+y)^n=\sum_{k=0}^n \binom{n}{k}x^k y^{n-k}
+$$
+*Proof.* 组合分析法：对于这个问题，$(x+y)^n$表示n个$(x+y)$的连乘，相当于在$n$个因子中选择$k$个，这$k$个只选择$x$变量，同时还有$n-k$个只选择$y$变量，这样构成了$x^ky^{n-k}$. 此时还要乘上构成这个组合的选法为$\binom{n}{k}$. 第二种证明方法是数学归纳法这里不做详述。
+
+二项式展开式有非常多的变种，下面给出一些：
+
+**推论1：**当$n$为正整数时，对于任意的$x,y$都会有：
+$$
+\begin{align}
+(x+y)^n&=\sum_{k=0}^{n}\binom{n}{n-k}x^ky^{n-k}\\
+(x+y)^n&=\sum_{k=0}^{n}\binom{n}{k}x^{n-k}y^{k}\\
+(x+y)^n&=\sum_{k=0}^{n}\binom{n}{n-k}x^{n-k}y^{k}
+\end{align}
+$$
+**推论2：**在实际情况下常会出现$y=1$，因此当$n$为正整数时，对于所有的$x$都会有：
+$$
+(1+x)^n=\sum_{k=0}^n \binom{n}{k}x^k=\sum_{k=0}^n \binom{n}{n-k}x^k
+$$
+**推论3：**当$x,y=1$的情况下：
+$$
+\sum_{k=0}^n \binom{n}{k}=2^n
+$$
+**推论4：**当$x=-1,y=1$的情况下：
+$$
+\sum_{k=0}^n\binom{n}{k}(-1)^k=0
+$$
+牛顿在1676年推广了二项式定理，得到了$(x+y)^{\alpha}$的展开式，其中$\alpha$为任意的实数。首先引入记号$\binom{\alpha}{k}$. 
+
+**定义：**对于任意的实数$\alpha$和整数$k$，定义：
+$$
+\binom{\alpha}{k}=
+\begin{cases}
+\frac{\alpha (\alpha-1)\cdots(\alpha-k+1)}{k!}& k>0\\
+1 & k=0\\
+0 & k<0
+\end{cases}
+$$
+为广义的**二项式系数**。
+
+**定理：**假设$\alpha$是任意一个实数，则对于满足$|\dfrac{x}{y}|<1$的所有$x$和$y$有：
+$$
+(x+y)^{\alpha}=\sum_{k=0}^{\infty}\binom{\alpha}{k} x^k y^{\alpha-k}
+$$
+上面的式子也称为牛顿二项式定理。同样的基于牛顿二项式定理，我们再引入一些推论：
+
+**推论1：**对于$|x|<1$的任何$x$，有：
+$$
+(1+x)^{\alpha}=\sum_{k=0}^{\infty}\binom{\alpha}{k} x^k
+$$
+**推论2：**若令$\alpha=-n$（$n$为正整数），对于$|x|<1$的任意$x$有：
+$$
+(1+x)^{-n}=\frac{1}{(1+x)^n}=\sum_{k=0}^{\infty}(-1)^k \binom{n+k-1}{k} x^k
+$$
+*Proof.* 假设取$\alpha =-n$，由：
+$$
+\binom{\alpha}{k}=\binom{-n}{k}=\frac{-n(-n-1)\cdots (-n-(k-1))}{k!}=\frac{(-1)^k n(n+1)\cdots (n+k-1)}{k!}=(-1)^k \binom{n+k-1}{k}
+$$
+**推论3：**当$|x|<1$时，同时令$n=1$，我们可以得到：
+$$
+\frac{1}{1+x}=\sum_{k=0}^\infty (-1)^k x^k
+$$
+**推论4：**当$|x|<1$时，同时令$x=-x$，我们可以得到：
+$$
+\frac{1}{1-x}=\sum_{k=0}^\infty x^k
+$$
+**推论5：**使用$-rx$替代$x$（$r$为非零常数），当$|rx|<1$时有：
+$$
+(1-rx)^{-n}=\sum_{k=0}^\infty \binom{n+k-1}{k}r^kx^k
+$$
+**推论6：**令$\alpha=1/2$，当$|x|<1$时有：
+$$
+\sqrt{1+x}=1+\sum_{k=1}^{\infty}\frac{(-1)^{k-1}}{2^{2k-1}k}\binom{2k-2}{k-1}x^k
+$$
+*Proof.* 当$\alpha =1/2$时，$\binom{\alpha}{0}=1$，而对于$k>0$，有：
+$$
+\begin{split}
+\binom{\alpha}{k}&=\frac{\frac{1}{2}\times (\frac{1}{2}-1)\times \cdots \times(\frac{1}{2}-k+1)}{k!}\\
+&=\frac{(-1)^{k-1}}{2^{2k-1}k}\binom{2k-2}{k-1}
+\end{split}
+$$
+（这个证明还需要进一步详细地推导）
+
+---
+
+####  组合恒等式
+
+**恒等式1：**对于正整数$n$和$k$，有：
+$$
+\binom{n}{k}=\frac{n}{k}\binom{n-1}{k-1}
+$$
+*Proof.* 当$k>n$时，$\binom{n}{k}=\frac{n}{k}\binom{n-1}{k-1}$.
+
+当$1\leq k\leq n$时，有：
+$$
+\begin{aligned}
+\binom{n}{k}&=\frac{n(n-1)\cdots (n-k+1)}{k(k-1)\cdots 1}\\
+&=\frac{n}{k}\times \frac{(n-1)(n-2)\cdots (n-k+1)}{(k-1)!}\\
+&=\frac{n}{k}\binom{n-1}{k-1}
+\end{aligned}
+$$
+**恒等式2：**对于正整数$n$，有：
+$$
+\sum_{k=1}^n k\binom{n}{k}=2^{n-1} n
+$$
+*Proof.* 
+$$
+\begin{split}
+\sum_{k=1}^n k\binom{n}{k} &= \sum_{k=1}^n k\cdot \frac{n}{k}\binom{n-1}{k-1}\\
+&= \sum_{k=1}^n n \binom{n-1}{k-1}\\
+&= \sum_{k=0}^{n-1} n \binom{n-1}{k}\\
+&= n\sum_{k=0}^{n-1} \binom{n-1}{k}\\
+&= 2^{n-1} n
+\end{split}
+$$
+*Another Proof.* 使用微分法：
+$$
+(1+x)^n =\sum_{k=0}^{n} \binom{n}{k} x^k
+$$
+两边同时对$x$做微分得到：
+$$
+n(1+x)^{n-1} = \sum_{k=1}^n k \binom{n}{k}x^{k-1}
+$$
+令$x=1$得：
+$$
+n\cdot 2^{n-1}=\sum_{k=1}^n k\binom{n}{k}
+$$
+**恒等式3：**对于正整数$n$，有：
+$$
+\sum_{k=0}^n(-1)^k k\binom{n}{k}=0
+$$
+*Proof.* 
+$$
+(1+x)^n=\sum_{k=0}^n \binom{n}{k}x^k
+$$
+两边同时对$x$做微分可以得到：
+$$
+n(1+x)^{n-1}=\sum_{k=0}^n \binom{n}{k} k x^{k-1}
+$$
+在上式中，令$x=-1$，则有：
+$$
+n\cdot 0 =\sum_{k=0}^n\binom{n}{k}k \cdot (-1)^{k-1}=\sum_{k=0}^n\binom{n}{k} k(-1)^k
+$$
+**恒等式4：**对于正整数$n$，有：
+$$
+\sum_{k=0}^n k^2 \binom{n}{k}=2^{n-2}n(n+1)
+$$
+证明的思路是：首先出发点一定还是二项式定理的推论：$(1+x)^n=\sum_{k=0}^n \binom{n}{k}x^k$.首先对于等式两边的式子同时对于$x$求微分，然后为了构造$k^2$我们等式两边同时乘上一个$x$然后两边同时对$x$再做一次微分就可以得到结果上面的结果，详细过程不再赘述。
+
+**恒等式5：**对于正整数$n$，有：
+$$
+\sum_{k=0}^n (-1)^{k-1}\binom{n}{k} k^2=0
+$$
+**恒等式6：**对于正整数$n$，有：
+$$
+\sum_{k=0}^n \frac{1}{k+1}\binom{n}{k}=\frac{2^{n+1}-1}{n+1}
+$$
+*Proof.* 将$(1+x)^n=\sum_{k=0}^n\binom{n}{k}x^k$两端从0到1积分得到：
+$$
+\int_0^1(1+x)^n\mathrm{d}x = \sum_{k=0}^n\binom{n}{k}\int_0^1x^k\mathrm{d}x
+$$
+
+$$
+\frac{(1+x)^{n+1}}{n+1}|_0^1=\sum_{k=0}^n\binom{n}{k}\frac{1}{k+1}x^{k+1}|_0^1
+$$
+
+令$x=1$可以得到：
+$$
+\frac{2^{n+1}-1}{n+1}=\sum_{k=0}^n \frac{1}{k+1}\binom{n}{k}
+$$
+总结：
+
+<font color=red>对于形如$\sum k^m\binom{n}{k}$的恒等式证明常常需要使用微分法；而对于形如$\sum\frac{1}{k+\alpha}\binom{n}{k}$的恒等式常常使用积分法来证明，在使用积分证明时一定要注意积分的上下限。</font>
+
+**恒等式7：**对于正整数$n,m$和$p\leq \min\{m,n\}$，有：
+$$
+\sum_{k=0}^p\binom{n}{k}\binom{m}{p-k}=\binom{m+n}{p}
+$$
+这个公式是范德蒙恒等式（Vandermonde恒等式）
+
+*Proof.* 第一种方法使用的是二项式定理：
+$$
+\begin{split}
+(1+x)^m(1+x)^n&=(1+x)^{m+n}\\
+\left[\sum_{k=0}^m\binom{m}{k}x^k\right]\left[\sum_{k=0}^n\binom{n}{k}x^k\right]&=\sum_{k=0}^{m+n}\binom{m+n}{k}x^k\\
+\end{split}
+$$
+比较等式两个$x^k$的系数，我们可以得到：
+$$
+\binom{m}{k}x^k \binom{n}{k}x^k=\binom{m}{k}\binom{n}{k}x^{2k}\\
+\binom{m}{k}x^k \binom{n}{p-k}x^{p-k}=\binom{m}{k}\binom{n}{p-k}x^p\\
+$$
+而右边式子中$x^p$的项为：$\dbinom{m+n}{p}x^p$. 而前面的式子中所有的能够得到$x^p$的项的式子为：$\sum_{k=0}^p\dbinom{m}{k}\dbinom{n}{p-k}x^p$.
+
+从而最终我们可以根据系数相等的原则：
+$$
+\binom{m+n}{p}=\sum_{k=0}^p\binom{m}{k}\binom{n}{p-k}
+$$
+*Another Proof.* 第二种方法使用组合分析法：
+
+假设集合$A$有$m$个元素，$B$有$n$个元素，定义$A\cup B$为集合$C$，我们假设$A\cap B=\empty$，那么集合$C$中就应该有$m+n$个元素，从这$(m+n)$个元素中寻找一个p-组合，我们可以得到$\binom{m+n}{p}$. 换一种思路，这个问题就可以变为，我从$A$中取$k$个元素，再从$B$中取$p-k$个元素的问题，根据乘法规则可以得到：$\binom{m}{k}\binom{n}{p-k}$，同时这种组合的方式根据加法规则，一共有：$\sum_{k=0}^p\binom{m}{k}\binom{n}{p-k}$. 同样可以证明恒等式7.
+
+**恒等式8：**对于正整数$m,n$有：
+$$
+\sum_{k=0}^m\binom{n}{k}\binom{m}{k}=\binom{m+n}{m}
+$$
+**恒等式9：**对于任意的正整数$n$有：
+$$
+\sum_{k=0}^m\binom{n}{k}^2=\binom{2n}{n}
+$$
+**恒等式10：**对于非负整数$p,q,n$, 有：
+$$
+\sum_{k=0}^p\binom{p}{k}\binom{q}{k}\binom{n+k}{p+q}=\binom{n}{p}\binom{n}{q}
+$$
+**恒等式11：**对于非负整数$p,q,n$, 有：
+$$
+\sum_{k=0}^p\binom{p}{k}\binom{q}{k}\binom{n+p+q-k}{p+q}=\binom{n+p}{p}\binom{n+q}{q}
+$$
+**恒等式12：**对于非负整数$n$和$k$, 有：
+$$
+\sum_{i=0}^n\binom{i}{k}=\binom{n+1}{k+1}
+$$
+可以使用数学归纳法证明。
+
+**恒等式13：**对于所有实数$\alpha$和非负整数$k$, 有：
+$$
+\sum_{j=0}^k\binom{\alpha+j}{j}=\binom{\alpha+k+1}{k}
+$$
+使用推广到广义二项式系数的Pascal公式，反复替换可以得到这个恒等式，证明过程略。
+
+##### 证明组合恒等式的常见方法：
+
+1. 数学归纳法
+2. 利用二项式系数公式，特别是Pascal公式
+3. 比较级数展开式中的系数（包括二项式定理和母函数法）
+4. 积分微分法
+5. 组合分析法
+
+---
+
+习题：
+
+2,4,5,6,7,11,13,14,16,19,24(1)(2),26
