add chapter2 notes for CM

--- a/Stochastic-Processes-and-Applications/第一章.md
+++ b/Stochastic-Processes-and-Applications/第一章.md
@@ -211,3 +211,13 @@ $$
 
 （3）$\lim_{x\to -\infty}F(x,y)=0$, $\lim_{y\to -\infty}F(x,y)=0$, 
 
+（4）$\forall x_1<x_2,y_1<y_2$, $F(x_2,y_2)-F(x_1,y_2)-F(x_2,y_1)+F(x_1,y_1)\geq 0$.
+
+##### 条件分布
+
+假设$(X,Y)$的联合分布函数为$F(x,y)$, 记$F_{Y|X}(y|x)=P(Y\leq y|X=x)$等于：
+$$
+\lim_{\alpha \rightarrow 0^+}\frac{F(x,y)-F(x-\alpha,y)}{F(x,+\infty)-F(x-\alpha,+\infty)} ,(\alpha>0)
+$$
+如果极限存在则称为在$X=x$的条件下，随机变量$Y$的条件分布函数。
+
