add assignments for CM and notes for FAT

--- a/Combinatorial-Mathematics/第二章 容斥原理.md
+++ b/Combinatorial-Mathematics/第二章 容斥原理.md
@@ -135,3 +135,29 @@ $|A_2\cap A_4|=0,|A_1\cap A_2\cap A_3|=0\cdots$
 $$
 |\bar{A}_1\cap \bar{A}_2\cap\bar{A}_3\cap\bar{A}_4|=455-(165+35+220+0)+(1+56+4+0+0+0)-0+0=96
 $$
+
+**例题：**重集$B=\{2\cdot a_1,5\cdot a_2,4\cdot a_3,7\cdot a_4\}$的10组合数为多少？
+
+【解】定义全集表示为重集$B'=\{\infty\cdot a_1,\infty\cdot a_2,\infty\cdot a_3,\infty\cdot a_4\}$的10组合数的结果：$F(4,10)$，同时定义：
+
+$p_1$表示$S$中至少含有3个$a_1$这一性质。
+
+$p_2$表示$S$中至少含有6个$a_2$这一性质。
+
+$p_3$表示$S$中至少含有5个$a_3$这一性质。
+
+$p_4$表示$S$中至少含有8个$a_4$这一性质。
+
+下面分别计算：$|A_i|$，$|A_1|=F(4,7),|A_2|=F(4,4),|A_3|=F(4,5),|A_4|=F(4,2)$
+
+另外：$|A_1\cap A_2|=F(4,1),|A_1\cap A_3|=F(4,2),|A_1\cap A_4|=0,|A_2\cap A_3|=0,|A_2\cap A_4|=0,|A_3\cap A_4|=0\cdots$
+
+从而我们可以得到最终结果表示为：
+$$
+\begin{split}
+&|\bar{A}_1\cap \bar{A}_2\cap \bar{A}_3\cap \bar{A}_4|\\
+=&F(4,10)-F(4,7)-F(4,4)-F(4,5)-F(4,2)+F(4,1)+F(4,2)+0+0+0-0-0+0\\
+=& 286-(120+35+70+10)+(4+10)\\
+=&
+\end{split}
+$$
