--- a/Finite-Automaton-Theory/第二章.md
+++ b/Finite-Automaton-Theory/第二章.md
@@ -153,3 +153,57 @@ $P$是有序偶对$(\alpha,\beta)$的集合，其中$\alpha$是集合$(\Sigma\cu
 
 **推导（派生）的定义：**
 
+对于文法$G$来说, $\alpha$和$\beta$是集合$(\Sigma\cup V)$上的串，$\alpha=pvr,\beta=pur$（$p,r$可能同时为$\epsilon$）而$v\rightarrow u$是文法$G$的产生式，则称$\alpha$直接推导（一步推导）出$\beta$. 记为$\alpha \Rightarrow \beta$, 即$pvr\Rightarrow pur$.
+
+推导的实质：替换。产生式的右边替换产生式的左边。
+
+推导的逆过程称为归约。
+
+$y \Rightarrow^+ z$表示$y$可以经过多步推导出$z$，即存在串的序列$\alpha_1,\alpha_2,\cdots,\alpha_n$; 令$y=\alpha_1,z=\alpha_n$且$\alpha_i\Rightarrow \alpha_{i+1}$.（这个对于所有的$n>i\geq 1$）
+
+$y\Rightarrow^{\ast}z$表示$y$可以经过任意步推导出$z$，即$y=z$或者$y\Rightarrow^+z$
+
+$S\Rightarrow ^\ast S$对于所有的文法一定成立，但是$S\Rightarrow^+ S$对于所有的文法不一定成立。
+
+**语言的定义：**给定文法$G$，有开始符号$S$，将$S$可以推导出所有句子的集合称为由文法产生的语言，记为$L(G)$.
+$$
+L(G)=\{ \omega |S \Rightarrow^\ast \omega,\text{and }\omega\in \Sigma^\ast\}
+$$
+文法$G$产生语言$L$，必须满足：(1) G推导产生的所有句子都在$L$中；(2) L的任意句子可以由$G$推导产生。
+
+##### 文法和语言的三类问题
+
+（1）已知文法得到该文法产生的语言
+
+（2）已知语言构造产生该语言的某个文法
+
+（3）判断一个文法是否由某个语言产生
+
+**一个语言可以由多个不同的文法产生；一个文法只能产生一个语言。**
+
+文法$G_1$和文法$G_2$之间等价和相同的区别？
+
+如果两个文法导出了相同的语言则认为这两个文法之间是等价的。
+
+如何证明：证明产生的语言互为子集：$L(G_1)\subseteq L(G_2)$以及$L(G_2)\subseteq L(G_1)$. 
+
+#### Chomsky对于文法，语言的分类
+
+语言的分类是根据产生该语言文法的类别进行分类的。
+
+0型文法：对于一般的短语结构文法(PSG) $G(\Sigma,V,S,P)$，G称为0型文法。对应的$L(G)$称为0型语言。
+
+1型文法：如果对于任意$\alpha\rightarrow \beta\in P$. 均有$|\alpha|\leq |\beta|$成立，则称G是1型文法。（上下文相关文法CSG）
+
+​	标准形式：$yAz\rightarrow y\omega z$. 其中$A\in V,y,z\in (\Sigma\cup V)^\ast, \omega\in (\Sigma\cup V)^+$.
+
+2型文法：如果对于任意$\alpha\to \beta\in P$, 均有$|\alpha|\leq |\beta|,\alpha\in V$（$\alpha$是非终结符）. 称G为2型文法：上下文无关文法(CFG). 
+
+3型文法：如果对于任意$\alpha\to \beta \in P$, 具有形式$A\to \omega$或者$A\to \omega B$. 其中$A,B\in V,w\in \Sigma^+$. 则称G是3型文法，或者右线性文法RLG，也可以称为正则文法RG.
+
+<font color=red>如果文法G中有$\alpha\to \epsilon$产生式，则G一定是0型文法。</font>
+
+文法分类判断方法：文法$G=(\Sigma,V,S,P)$则（1）G是短语结构文法；（2）若文法G所有产生式的左边长度小于等于右边的长度，那么G是上下文相关文法。（3）如果上下文相关G的所有产生式左边都是一个非终结符，那么G是上下文无关文法。（4）如果上下文无关文法G所有产生式右边最多只有一个非终结符且该非终结符只能出现在最右边，那么G是右线性文法。
+
+判断文法G： $S\to 01|101S$. 这个文法G是RG, CFG, CSG, PSG.
+
