add new study files

--- a/Stochastic-Processes-and-Applications/第一章.md
+++ b/Stochastic-Processes-and-Applications/第一章.md
@@ -83,7 +83,7 @@ $$
 
 *Proof.* $A_n=(A_n-A_{n+1})\cup (A_{n+1}\cup A_{n+2})\cup \cdots=\cup_{k=n}^\infty (A_k-A_{k+1})=\cup_{k=n}^\infty B_k,n=1,2,\cdots$
 
-![概率的连续性](/pics/1.png)
+![概率的连续性](pics/1.png)
 
 上面的图可以很好的理解，构成$A_n$的方式可以理解为通过无数个同心圆环的累加构成的。这里的所有的同心圆环表示的就是$B_k$，其中$B_1,B_2,\cdots$是互不相容的，因此由完全可加性可以得到：
 $$
@@ -181,7 +181,7 @@ $\{X>x\}=\Omega-\{X\leq x\}\in F$
 
 对于二维的随机变量来说：
 
-![二维随机变量定义在同一个概率空间中](/pics/2.png)
+![二维随机变量定义在同一个概率空间中](pics/2.png)
 
 找一个经典例子：
 
@@ -220,4 +220,324 @@ $$
 \lim_{\alpha \rightarrow 0^+}\frac{F(x,y)-F(x-\alpha,y)}{F(x,+\infty)-F(x-\alpha,+\infty)} ,(\alpha>0)
 $$
 如果极限存在则称为在$X=x$的条件下，随机变量$Y$的条件分布函数。
+
+需要满足的条件是：$\forall \alpha > 0$,
+$$
+\begin{split}
+&F(x,+\infty) = F(x-\alpha, +\infty)\\
+=&F_X(x) - F_X(x-\alpha)\\
+=&P(x-\alpha < X\leq x)>0
+\end{split}
+$$
+**例题：**射手进行射击，击中目标两次则停止射击，每一次的命中率为$p(0<p<1)$, 令$X$表示第一次命中目标时的射击次数，令$Y$表示第二次命中目标时的射击次数，求条件分布律。
+
+【解】求解的目标是：$P\{X=i|Y=j\},i=1,2,\cdots,j-1$
+
+联合分布：$P\{X=i,Y=j\}=p^2(1-p)^{j-2},(1\leq i<j=2,3,\cdots)$
+
+关于$Y$的边缘分布：$P\{Y=j\}=\sum_{i=1}^{j-1}P\{X=i,Y=j\}=\sum_{i=1}^{j-1}p^2(1-p)^{j-2}=(j-1)p^2(1-p)^{j-2},(j=2,3,\cdots)$
+
+从而下面求条件分布：
+$$
+\begin{split}
+&P\{X=i|Y=j\}=P\{X=i,Y=j\}/P(Y=j)\\
+=& p^2(1-p)^{j-2}/(j-1)p^2(1-p)^{j-2}\\
+=&\frac{1}{j-1},(i=1,2,\cdots,j-1)
+\end{split}
+$$
+**例题：**矿山一年发生事故的总数为$X\sim P(\lambda)$，一个事故是致命事故的概率为$p \,(0<p<1)$, 假设一年内发生致命事故的次数为$Y$，求$Y$的分布律。
+
+【解】求解目标是：$P(Y=i),i=0,1,2,\cdots$.
+
+我们首先很容易知道：$P(X=k)=\frac{\lambda^k}{k!}e^{\lambda},(k=0,1,2,\cdots)$
+
+而当发生了$k$次事故的情况下我们可以得到发生致命事故的次数可以写为：
+$$
+P(Y=i|X=k)=C^i_kp^i(1-p)^{k-i},(i=0,1,2,\cdots,k)
+$$
+根据条件概率公式我们可以计算得到$(X,Y)$的联合概率分布律为：
+$$
+\begin{split}
+&P(X=k,Y=i)=P(X=k)P(Y=i|X=k)\\
+=& \frac{\lambda^k}{k!}e^{-\lambda}C^i_kp^i(1-p)^{k-i},(0\leq i \leq k=1,2,\cdots)
+\end{split}
+$$
+从而我们最后再计算$Y$的分布律为：
+$$
+\begin{split}
+P(Y=i)&=\sum_{k=i}^\infty\frac{\lambda^k}{k!}e^{-\lambda}C^i_kp^i(1-p)^{k-i}\\
+&=\frac{(\lambda p)^i}{i!}e^{-\lambda}\sum_{k=i}^\infty \frac{[\lambda(1-p)]^{k-i}}{(k-i)!}\\
+&=\frac{(\lambda p)^i}{i!}e^{-\lambda p}
+\end{split}
+$$
+重要计算公式：
+
+对于连续性的$(X,Y)$我们可以得到：
+$$
+F_{Y|X}(y|x)=P(Y\leq y|X=x)=\frac{\int_{-\infty}^y f(x,v)\mathrm{d}v}{f_X(x)}
+$$
+同时概率密度函数可以表示为：
+$$
+f_{Y|X}(y|x)=F'_{Y|X}(y|x)=\frac{f(x,y)}{f_X(x)}
+$$
+这个概率密度函数表示的是在$X=x$的条件下，随机变量$Y$的条件密度函数。
+
+**例题：**假设随机变量$(X,Y)$在$D$上服从均匀分布：$D=\{(x,y):0\leq x\leq 1,0\leq x+\frac{y}{2}\leq 1\}$. 试求$f_{X|Y}(x|y)$和$f_{Y|X}(y|x)$.
+
+【解】以求解$f_{X|Y}(x|y)$为例，首先求解$(X,Y)$的联合分布函数，二维均匀分布的概率密度函数等于构成面积的倒数，因此我们可以写出：
+$$
+f(x,y)=
+\begin{cases}
+\frac{1}{2}, & (x,y)\in D\\
+0 ,&(x,y)\notin D\\
+\end{cases}
+$$
+从而我们可以求出随机变量$X$的边缘概率密度函数：
+$$
+f_X(x)=\int_{-\infty}^{+\infty}f(x,y)\mathrm{d}y=\int_{-2x}^{2(1-x)}\frac{1}{2}\mathrm{d}y,(0<x<1)
+$$
+其他的情况下均为0.
+
+同样的我们可以求出随机变量$Y$的边缘概率密度函数：
+$$
+f_Y(y)=\int_{0}^{1-\frac{y}{2}}\frac{1}{2}\mathrm{d}x ,(0\leq y <2)
+$$
+其他情况下为0.
+
+接下来就可以计算条件概率密度函数：
+
+当$0<x<1$的时候：
+$$
+f_{Y|X}(y|x)=\frac{f(x,y)}{f_X(x)}\\
+=\begin{cases}
+\frac{1}{2},& -2x<y<2(1-x)\\
+0,&\text{otherwise}
+\end{cases}
+$$
+当$-2<y<0$的时候：
+$$
+f_{X|Y}(x|y)=\frac{f(x,y)}{f_Y(y)}\\
+=\begin{cases}
+\frac{1}{1-y/2},& \frac{y}{2}< x < 1\\
+0,&\text{otherwise}
+\end{cases}
+$$
+当$0\leq y <2$的时候：
+$$
+f_{X|Y}(x|y)=\frac{f(x,y)}{f_Y(y)}\\
+=\begin{cases}
+\frac{1}{1-y/2},& 0< x < 1-\frac{y}{2}\\
+0,&\text{otherwise}
+\end{cases}
+$$
+
+##### 随机向量的独立性
+
+设$(X,Y)$是二维随机变量，对于$\forall (x,y)\in R_2$，$P(X\leq x,Y\leq y)=P(X\leq x)P(Y\leq y)$成立则称$X$和$Y$相互独立。
+
+<img src="pics/3.png" alt="相互独立的充要条件" style="zoom:50%;" />
+
+#### 1.3 随机变量的函数
+
+关于这个问题上存在两个点：（1）随机变量的函数是否仍然在同一个概率空间上？（2）如何确定其分布？
+
+第一个问题有充分条件成立。
+
+```mermaid
+graph LR
+A[Ω]-->B[R^n]-->C[R^m]
+```
+
+第二个问题如何确定分布。
+
+假设已知$(X_1,X_2,\cdots,X_n)$的联合分布，并有$k$个$n$元连续函数：
+$$
+y_1=g_1(x_1,\cdots,x_n),\cdots,y_k=g_k(x_1,\cdots,x_n)
+$$
+则$Y_i=g_i(X_1,\cdots,X_n)$，$(i=1,2,\cdots,k)$是随机变量。联合分布函数为：
+$$
+F(y_1,y_2,\cdots,y_k)=P(Y_1\leq y_1,\cdots,Y_k\leq y_k)=P(g_1(X_1,\cdots,X_n)\leq y_1,\cdots,g_k(X_1,\cdots,X_n)\leq y_k)
+$$
+连续性做积分，离散型做加和。
+
+二维随机变量的变换：
+
+假设$(X_1,X_2)$的联合密度为：$f(x_1,x_2)$，若函数：$y_1=g_1(x_1,x_2)$和$y_2=g_2(x_1,x_2)$满足下面的条件：
+
+（1）存在唯一的反函数：$x_1=x_1(y_1,y_2),x_2=x_2(y_1,y_2)$.
+
+（2）有连续的一阶偏导数
+
+（3）Jacobi行列式:
+$$
+J=\begin{bmatrix}
+\frac{\part x_1}{\part y_1} & \frac{\part x_1}{\part y_2}\\
+\frac{\part x_2}{\part y_1} & \frac{\part x_2}{\part y_2}
+\end{bmatrix}
+\neq 0
+$$
+（关于Jacobi行列式不为0的问题，也就是说通过空间映射之后面积不为0（原相不为0））
+
+则$Y_1=g_1(X_1,X_2),Y_2=g_2(X_1,X_2)$的联合概率密度为：$f[x_1(y_1,y_2),x_2(y_1,y_2)]|J|$
+
+*Proof.* $Y_1,Y_2$是随机变量，其联合分布函数为：
+$$
+F(y_1,y_2)=\iint_D f(x_1,x_2)\mathrm{d}x_1\mathrm{d}x_2
+$$
+其中$D=\{(x_1,x_2):g_1(x_1,x_2)\leq y_1,g_2(x_1,x_2)\leq y_2\}$
+
+做积分变换：
+$$
+\begin{cases}
+x_1=x_1(u_1,u_2);\\
+x_2=x_2(u_1,u_2).
+\end{cases}
+$$
+
+$$
+F(y_1,y_2)=\int_{-\infty}^{y_1}\int_{-\infty}^{y_2} f[x_1(u_1,u_2),x_2(u_1,u_2)]|J|\mathrm{d}u_1\mathrm{d}u_2
+$$
+
+**例题：**和的分布$Y=X_1+X_2$
+
+令：
+$$
+\begin{cases}
+y_1=x_1\\
+y_2=x_1+x_2
+\end{cases}
+$$
+则：
+$$
+\begin{cases}
+x_1=x_1\\
+x_2=y_2-y_1
+\end{cases}
+$$
+
+$$
+J=\begin{bmatrix}
+\frac{\part x_1}{\part y_1} & \frac{\part x_1}{\part y_2}\\
+\frac{\part x_2}{\part y_1} & \frac{\part x_2}{\part y_2}
+\end{bmatrix}
+=\begin{bmatrix}
+1 & 0\\
+-1 & 1
+\end{bmatrix}=1
+$$
+
+我们不难得到$Y_1=X_1$和$Y_2=X_1+X_2$的联合密度为：
+$$
+f_{Y_1,Y_2}(y_1,y_2)=f_{X_1,X_2}(y_1,y_2-y_1)|J|
+$$
+进一步得到$Y_2=X_1+X_2$的边缘密度为：
+$$
+f_{X_1+X_2}(y_2)=\int_{-\infty}^{+\infty}f_{X_1,X_2}(y_1,y_2-y_1)\mathrm{d}y_1
+$$
+如果$X_1,X_2$相互独立则：
+$$
+f_{X_1+X_2}(y_2)\int_{-\infty}^{+\infty}f_{X_1}(y_1)f_{X_2}(y_2-y_1)\mathrm{d}y_1
+$$
+上面的这个公式也被称为两个函数的卷积或者褶积。
+
+#### 1.4 随机变量的数字特征
+
+首先提到随机变量的数字特征我们第一时间想到的是期望和方差。
+
+关于期望的定义在概率论中定义为：
+$$
+E(x)=
+\begin{cases}
+\int_{-\infty}^{+\infty}xf(x)\mathrm{d}x & \text{连续型r.v.}\\
+\sum_{i=1}^\infty x_i P(X=x_i)&\text{离散型r.v.}
+\end{cases}
+$$
+上面的定义我们存在一个前提条件就是匀质的介质下的计算方式，而在非匀质的条件下不能够使用这样的方式计算，因此这里我们引入了R-S积分的概念。
+
+##### R-S(黎曼-斯蒂阶)积分简介
+
+设$f(x),g(x)$为定义在$[a,b]$上的实值函数，在区间内做一个剖分，得到$a=x_0<x_1<\cdots < x_n=b$. 任取点：$x_k^\ast\in [x_k,x_{k+1}],k=0,1,2\cdots,n-1$.
+
+和式：（跟最初讲微积分的思想非常相似，取足够小的间隔乘上在该极小区间上的密度做求和运算）
+$$
+\sigma=\sum_{k=0}^{n-1}f(x^\ast_k)[g(x_{k+1})-g(x_k)]
+$$
+如果存在实数$I$使得对于$\forall \epsilon > 0,\exist \delta>0$只要：
+$$
+\lambda=\max_{1\leq k\leq n-1}(x_{k+1}-x_k)< \delta
+$$
+对于任意分点以及任意$x_k^\ast$的取法均有：
+$$
+|\sigma-I|< \epsilon
+$$
+记为：$(R) \int_a^bf(x)\mathrm{d}g(x)=\lim_{\lambda\rightarrow 0}\sigma=\lim_{\lambda\rightarrow 0}\sum_{k=0}^{n-1}f(x_k^\ast)[g(x_{k+1})-g(x_k)]=I$
+
+我们需要注意到这里的积分后面的$g(x)$不可以随意取出。这个$g(x)$我们定义为基函数或者势函数。
+
+正式定义：我们称$I$是$f(x)$关于$g(x)$在区间$[a,b]$上的R-S积分，简记为：
+$$
+I=\int_a^b f(x)\mathrm{d}g(x)
+$$
+如果$\int_{-\infty}^{+\infty}f(x)\mathrm{d}g(x)=\lim_{a\rightarrow -\infty,b\rightarrow +\infty}\int_a^b f(x)\mathrm{d}g(x)$存在，则称为广义R-S积分。
+
+黎曼积分$\int_a^b f(x)\mathrm{d}x$是R-S积分的特例。
+
+一些性质：
+
+（1）被积函数的线性运算性质
+
+（2）势函数或者说基函数的线性运算性质
+
+（3）提出常数项
+
+（4）区间可加性
+
+（5）类似分部积分的性质
+
+**广义R-S积分定理：**如果$f(x)$在R上 连续且有界，则$g(x)$在R上单调有界，则积分：
+$$
+\int_a^b f(x)\mathrm{d}g(x)
+$$
+存在而且（1）$g'(x)$在R上存在，在任意有限区间$[a,b]$上黎曼可积，则：
+$$
+\int_{-\infty}^{+\infty} f(x)\mathrm{d}g(x)=\int_{-\infty}^{+\infty} f(x)g'(x)\mathrm{d}x
+$$
+（2）可离散化处理（略过）
+
+有了R-S积分我们就可以重新定义期望：
+
+对于离散型随机变量：
+$$
+E(x)=\int_{-\infty}^{+\infty}x \mathrm{d}F(x)=\sum_{k=-\infty}^\infty x_kp_k
+$$
+对于连续性随机变量：
+$$
+E(x)=\int_{-\infty}^{+\infty}x \mathrm{d}F(x)=\int_{-\infty}^{+\infty} f(x)p(x)\mathrm{d}x
+$$
+R-S可以推广到二阶，这里略过这部分内容。
+
+##### 数学期望和方差
+
+随机变量$X$的分布函数为$F(x)$，若$\int_{-\infty}^{+\infty}|x|\mathrm{d}F(x)<+\infty$, 则：
+$$
+E(X)=\int_{-\infty}^{+\infty}x \mathrm{d}F(x)
+$$
+连续型：
+$$
+E(X)=\int_{-\infty}^{+\infty}xf(x)\mathrm{d}x
+$$
+离散型：
+$$
+E(X)=\sum_{i=1}^\infty x_iP(X=x_i)
+$$
+重要公式（这里略去一些条件的说明）
+$$
+E(Y)=E(g(x))=\int_{-\infty}^{+\infty}g(x)\mathrm{d}F(x)
+$$
+方差：
+$$
+D(X)=\int_{-\infty}^{+\infty}[x-E(X)]^2\mathrm{d}F(x)
+$$
+
+##### 条件数学期望
 
