add assignment-3 for CM

--- a/Combinatorial-Mathematics/第二章 容斥原理.md
+++ b/Combinatorial-Mathematics/第二章 容斥原理.md
@@ -158,6 +158,151 @@ $$
 &|\bar{A}_1\cap \bar{A}_2\cap \bar{A}_3\cap \bar{A}_4|\\
 =&F(4,10)-F(4,7)-F(4,4)-F(4,5)-F(4,2)+F(4,1)+F(4,2)+0+0+0-0-0+0\\
 =& 286-(120+35+70+10)+(4+10)\\
-=&
+=& 65
 \end{split}
 $$
+
+#### 2.3 错排问题
+
+考虑一个问题，在一个宴会中有$n$个人将他们的帽子放在衣帽间中，请问有多少张交还帽子的方式使得没有一个人得到他自己原来的帽子。（错排问题）
+
+定义客人表示为：$\{1,2,\cdots,n\}$同时一种帽子的分配方式为：$\{a_1,a_2,\cdots,a_n\}$. 我们的目标为$a_i\neq i$. 从而问题就变为要求有多少个$\{1,2,\cdots,n\}$的全排列使得对于所有的$i$都有$a_i\neq i$. 这个我们称之为$n$的错排。使用$D_n$来表示。
+
+当$n\geq 1$时，有：
+$$
+D_n=n!\left[1-\frac{1}{1!}+\frac{1}{2!}-\frac{1}{3!}+\cdots + (-1)^n \frac{1}{n!}\right]
+$$
+*Proof.* 使用容斥原理来证明，首先在不受约束的情况下的全排列结果表示为：$n!$. 然后我们定义性质$p_i$表示为$a_i=i$, 也就是在所有人中有一个人拿到了原来的帽子。同时令$A_i$表示$S$中具有性质$p_i$的排列所组成的子集合。又因为$\{1,2,\cdots,n\}$的一个错排就是一个排列，并且这个排列不具有性质$p_1,p_2,\cdots,p_n$. 从而我们知道$|\bar{A}_1\cap \bar{A}_2\cap \cdots \cap \bar{A}_n|$就是$\{1,2,\cdots,n\}$的所有错排组成的集合的个数，因而有：
+$$
+D_n=|\bar{A}_1\cap \bar{A}_2\cap \cdots \cap \bar{A}_n|
+$$
+ 根据容斥原理我们可以得到：
+$$
+\begin{split}
+D_n&=n!-\binom{n}{1}(n-1)! + \binom{n}{2}(n-2)! -\cdots + (-1)^n\binom{n}{n}(n-n)!\\
+&=n! - \frac{n!}{1!} + \frac{n!}{2!}-\cdots +(-1)^n\frac{1!}{n!}\\
+&= n!\left[1-\frac{1}{1!}+\frac{1}{2!}-\frac{1}{3!} +\cdots +(-1)^n\frac{1}{n!}\right]
+\end{split}
+$$
+由于$e^{-1}$可以表示为下面的无穷级数：
+$$
+e^{-1}=1-\frac{1}{1!}+\frac{1}{2!}-\frac{1}{3!} +\cdots + (-1)^n \frac{1}{n!}+\cdots
+$$
+从而我们可以得到：
+$$
+\lim_{n\to \infty}\frac{D_n}{n!}=e^{-1}
+$$
+**定理：**$D_n=(n-1)(D_{n-1} + D_{n-2})$
+
+#### 2.4 相对位置上有限制的排列问题
+
+抽象成一个一般的数学问题，对于给定的正整数$n$，计算集合$\{1,2,\cdots,n\}$的且不允许出现12, 23,34,...,(n-1)n的全排列的个数$Q_n$. 
+
+**定理：**
+$$
+Q_n=n!-\binom{n-1}{1}(n-1)!+\binom{n-1}{2}(n-2)!-\cdots +(-1)^{n-1}\binom{n-1}{n-1}\times 1!
+$$
+当$n\geq 2$时，有：
+$$
+Q_n=D_n+D_{n-1}
+$$
+**例题：**有$n$名儿童围坐在一个旋转木马上，问有多少方式改变他们的座位使得每个儿童有一个不同的儿童坐在他们的前面？
+
+【解】这个问题实际上是求集合$\{1,2,\cdots,n\}$的圆排列中不出现12,23,34,...,(n-1)n的情况的圆排列的个数。
+
+定义$A_i(i=1,2,\cdots,n)$表示$S$中具有性质$p_i$的元素组成的集合。则$\bar{A}_1\cap \bar{A}_2\cap \cdots \cap \bar{A}_n$表示$S$中不具有性质$p_1,p_2,\cdots,p_n$的元素组成的集合。
+
+$A_1$表示的所有圆排列中出现12的圆排列的集合，所有$A_1$的一个圆排列可以看成是具有$n-1$个元素的集合：$\{12,3,\cdots,n\}$的一个圆排列，因此有：$|A_1|=(n-2)!$. 同理可以得到所有人的$|A_i|=(n-2)!$.
+
+对于一般的$1\leq k \leq n-1$我们可以有：
+$$
+|A_{i_1}\cap A_{i_2}\cap \cdots A_{i_k}|=(n-k-1)!
+$$
+故所求方法数量为：
+$$
+|\bar{A}_1\cap \bar{A}_2\cap \cdots \cap \bar{A}_n|\\
+=(n-1)!-\binom{n}{1}\cdot (n-2)!+\binom{n}{2}\cdot (n-3)!-\cdots + (-1)^{n-1}\binom{n}{n-1}\cdot 0!+(-1)^n\binom{n}{n}\cdot 1
+$$
+
+#### 2.5 一般有限制的排列
+
+错排问题实际上是一类有禁位的排列，即$i$不排在$i$位置上的排列。更一般地如果$i$不排在某些位置的$1,2,\cdots,n$的全排列，其排列计数的计算此类问题的解法之一就是利用所谓的“棋盘多项式”。
+
+在给定一个棋盘$C$中放入$k$个无区别的棋子，要求每个棋子只能够放一格，且每个棋子不同行不同列，记不同的放法数为$r_k(C)$，问$r_k(C)$的值是多少？此问题称为棋子问题。
+
+<img src="chapter2/1.png" alt="棋盘问题基本计算" style="zoom:67%;" />
+
+对于例11中给出的棋盘$C_1,C_2,C_3$可以分别给出他们的棋盘多项式。
+$$
+R(C_1)=1+x\\
+R(C_2)=1+2x\\
+R(C_3)=1+2x+x^2
+$$
+棋盘多项式表示为：
+$$
+R(C)=\sum_{k=0}^n r_k(C)x^k
+$$
+**定理：**给定棋盘$C$，指定$C$中某格$A$，令$C_i$为$C$中删除指定格$A$所在的行和列后所剩下的棋盘，$C_e$为$C$中删除指定格$A$后剩下的棋盘，则有：
+$$
+R(C)=xR(C_i)+R(C_e)
+$$
+证明略。
+
+**例题：**
+
+<img src="chapter2/2.png" alt="计算棋盘多项式实例" style="zoom:60%;" />
+
+如果两个棋盘$C_1,C_2$，如果$C_1$的所有格与$C_2$中的所有格都不同行同列，则我们称这两个棋盘是独立的。
+
+如果一个棋盘可以分解为两个独立的棋盘$C_1$和$C_2$，那么我们可以得到：
+$$
+R(C)=R(C_1)R(C_2)
+$$
+<font color=red>重要求解思路：</font>
+
+考虑集合$\{1,2,\cdots,n\}$的一个全排列且满足$i(i=1,2,\cdots,n)$不排列在某个已知位置，求不同的排列方式的数量。此问题称为$n$云有禁位的排列问题。可以通过棋子多项式求解。首先我们建立一个$n\times n$的棋盘$C$，然后再对每一个元$i$，如果$i$不排列在$j$位置，则将$C(i,j)$位置画上阴影表示禁位。最后求出禁位棋盘的棋子多项式，带入前面的公式中即可求得排列数。
+
+<img src="chapter2/3.png" alt="禁位问题排列数的求解" style="zoom:60%;" />
+
+如这个图所示，要求1不能排列在2号位置，要求2不能排列在3，4位置，要求3不能排列在1号位置，要求4不能排列在2，3号位置。
+
+**定理：**
+
+n元有禁位的排列数为：
+$$
+n!-r_1(n-1)!+r_2(n-2)!-\cdots+(-1)^nr_n
+$$
+其中$r_i$表示的是将$i$个棋子放入禁区棋盘的方式数。
+
+**例题：**尝试求解错排问题。
+
+首先我们可以构建如下的棋盘：
+
+<img src="chapter2/4.png" alt="错排问题对应的棋盘" style="zoom:67%;" />
+
+对于放入禁区棋盘中的结果：
+$$
+\begin{split}
+R(C)&=[R(\Box)]^n\\
+&=(1+x)^n\\
+&=1+\binom{n}{1}x+\binom{n}{2}x^2+\cdots+\binom{n}{n}x^n
+\end{split}
+$$
+因此我们可以得到：
+$$
+r_1=C(n,1),r_2=C(n,2),\cdots,r_n=C(n,n)
+$$
+从而错排的总排列数为：
+$$
+\begin{split}
+D_n&=n!-C(n,1)(n-1)!+C(n,2)(n-2)!-\cdots+(-1)^nC(n,n)0!\\
+&= n!-\frac{n!}{1!}+\frac{n!}{2!}-\cdots+(-1)^n\frac{n!}{n!}\\
+&=n!(1-\frac{1}{1!}+\frac{1}{2!}-\cdots+(-1)^n\frac{1}{n!})
+\end{split}
+$$
+
+---
+
+#### 作业：
+
+1，2，3，4，7，8，9，10，11，13，14，16，20
