add FAT files for notes and assignments

--- a/Finite-Automaton-Theory/第二章.md
+++ b/Finite-Automaton-Theory/第二章.md
@@ -187,6 +187,8 @@ $$
 
 如何证明：证明产生的语言互为子集：$L(G_1)\subseteq L(G_2)$以及$L(G_2)\subseteq L(G_1)$. 
 
+---
+
 #### Chomsky对于文法，语言的分类
 
 语言的分类是根据产生该语言文法的类别进行分类的。
@@ -206,4 +208,188 @@ $$
 文法分类判断方法：文法$G=(\Sigma,V,S,P)$则（1）G是短语结构文法；（2）若文法G所有产生式的左边长度小于等于右边的长度，那么G是上下文相关文法。（3）如果上下文相关G的所有产生式左边都是一个非终结符，那么G是上下文无关文法。（4）如果上下文无关文法G所有产生式右边最多只有一个非终结符且该非终结符只能出现在最右边，那么G是右线性文法。
 
 判断文法G： $S\to 01|101S$. 这个文法G是RG, CFG, CSG, PSG.
+
+空句子不影响产生的文法的类型。
+
+设$G=(\Sigma,V,S,P)$表示一个文法，**如果$S$不出现在任何产生式的右边**则：
+
+（1）如果$G$是CSG，仍然称$(\Sigma,V,S,P\cup\{S\to\epsilon\})$为CSG，产生的语言仍然为CSL.
+
+（2）如果$G$是CFG，仍然称$(\Sigma,V,S,P\cup\{S\to\epsilon\})$为CFG，产生的语言仍然为CFL.
+
+（3）如果$G$是RLG，仍然称$(\Sigma,V,S,P\cup\{S\to\epsilon\})$为RLG，产生的语言仍然为RLL.
+
+注意限制条件：开始符号只能出现在产生式的左边不用出现在右边，开始符号不能当作一般的非终结符来进行处理。
+
+**定理：**设文法$G=(\Sigma,V,S,P)$, 则存在与G同类型的文法$G'=(\Sigma',V',S',P')$使得$L(G)=L(G')$, 且$G'$的开始符号$S'$不出现在$G'$的任何产生式的右边。
+
+---
+
+#### 文法产生语言
+
+递归的上下文无关文法的定义：一个上下文无关的文法$G$，如果存在$A\in V$, 有$A\Rightarrow^+\alpha A\beta$则称$A$是递归的非终结符。递归分为直接递归和间接递归。一个产生式一步推导就是直接递归的非终结符。空串产生式的作用就是在推导的过程中对于某个句型，省略掉能够产生$\epsilon$的非终结符。如果某个上下文无关文法$G$有$S\to\epsilon$, 则$L(G)$一定包含空句子$\epsilon$. 
+
+**例题：**字母表$\{a,b\}$上所有堆成的非空串组成的语言（没有中心点），构造文法产生这个语言。
+
+【解】首先$aa,bb$是最基本的句子。如果$S$是句子则$aSa$以及$bSb$是句子。因此我们就可以写出文法产生式。
+$$
+\begin{split}
+&S\to aa\\
+&S\to bb\\
+&S\to aSa\\
+&S\to bSb
+\end{split}
+$$
+**例题：**字母表$\{a,b\}$下对于产生（1）语言$L=\{\omega d\omega^T,\omega\in \{a,b,c\}^+,d\in\{a,b\}\}$构成产生语言$L$的文法；（2）语言$L=\{\omega d\omega^T,\omega\in \{a,b,c\}^\ast,d\in\{a,b\}\}$构成产生语言$L$的文法；（3）语言$L=\{a^nb^n|n\geq 0\}$构造产生语言$L$的文法；
+
+【解】（1）$S\to aSa|bSb|cSc|ada|bdb|cdc, d\to a|b$; （2）$S\to aSa|bSb|cSc|a|b$; （3）$S\to aSb|\epsilon$. 
+
+小技巧：对于任意的$a,b\in \Sigma^+$, 使用$A\to ab|aAb$产生$\{a^nb^n|n>0\}$; 使用$A\to a|b|aA|bA$产生$\{a,b\}^+$;  使用$A\to a|aA$产生$\{a\}^+$; 使用$A\to \epsilon|aAb$产生$\{a^nb^n|n\geq0\}$; 使用$A\to \epsilon |aA|bA$产生$\{a,b\}^\ast$; 使用$A\to \epsilon|aA$产生$\{a\}^\ast$.
+
+使用$A\to aAa|bAb$产生$\{\omega A \omega^T|\omega\in \{a,b\}^+\}$.
+
+**例题：**字母表为$\{0,1\}$，构造文法分别产生$\Sigma=\{0,1\}$上的语言：
+$$
+\begin{split}
+&(1) \{x|x=x^T,x\in \Sigma\}\\
+&(2) \{x|x=x^T,x\in \Sigma^+\}\\
+&(3)\{xx^T|x\in \Sigma^+\}\\
+&(4)\{xx^T|x\in \Sigma^\ast\}\\
+&(5) \{x0x^T|x\in \Sigma^+\}\\
+&(6) \{xwx^T|x,w\in \Sigma^+\}\\
+&(7)\{xx^Tw|x,w\in \Sigma^+\}
+\end{split}
+$$
+【解】（1）串与其逆相等。$S\to 0|1$; （2）$S\to 0S0|1S1|0|1|00|11$; （3）$S\to 0S0|1S1|00|11$; （4）$S\to 0S0|1S1|\epsilon$; （5）$S\to 0S0|1S1|000|101$；（6）$S\to 0S0|1S1|0A0|1A1, A\to 0|1|0A|1A$；（7）$S\to AB, A\to 00|11|0A0|1A1,B\to0|1|0B|1B$
+
+**例题：**构造文法产生所有的无符号数，由$\{0,1,\cdots,9\}$的10个数字符号组合而成的不允许从0开始。
+
+【解】：使用$A$限制首位不为0的情况，使用$M$递归定义长度无限的无符号数。构造的产生式如下：
+$$
+\begin{split}
+&N\to AM|0\\
+&A\to 1|2|3|4|5|6|7|8|9\\
+&M\to \epsilon|0M|1M|2M|3M|4M|5M|6M|7M|8M|9M\\
+\end{split}
+$$
+产生语言$\{\omega|\omega\in \{0,1\}^\ast,且\omega中有相同数量的0和1\}$的文法：
+$$
+S\to S0S1S|S1S0S|\epsilon
+$$
+【难点】产生语言$L(G)=\{a^nb^nc^n|n>0\}$的文法。
+$$
+\begin{gather}
+S\to aSBC\\
+S\to aBC\\
+CB\to BC\\
+aB\to ab\\
+bB \to bb\\
+bC \to bc\\
+cC\to cc\\
+\end{gather}
+$$
+还可以简化为：
+$$
+S\to abc|aSBc\\
+cB\to Bc\\
+aB\to ab\\
+bB\to bb
+$$
+<font color=red>难点：上下文相关文法（CSG）的构造。</font>
+
+---
+
+#### 无用非终结符
+
+**定义：**一个无关文法$G$, $A\in V$，如果$A$不出现在任何形如：$S\Rightarrow^\ast uAv\Rightarrow^+u\omega v$的推导之中，则$A$为无用的非终结符。
+
+相对而言，有用非终结符$A$必须同时满足：（1）$A$必须出现在某个句型中，（2）从$A$开始能够产生某些终结符串。
+
+如果文法$G$的开始符号$S$是无用的非终结符号，那么$L(G)=\empty$.
+
+---
+
+#### 空串定理
+
+上下文无关文法$G$存在一般的空串产生式$A\to \epsilon$, 则存在另一个上下文无关文法$G_1$使得（1）$L(G)=L(G_1)$；（2）如果$\epsilon\notin L(G)$，则$G_1$中没有任何空串产生式（$S_1$就是$S$）；（3）如果$\epsilon\in L(G)$则$G_1$中仅仅有一个空串产生式$S_1\to \epsilon$，且$S_1$不出现在$G_1$的产生式的右边。
+
+---
+
+#### 语言之间的运算以及其运算的封闭性
+
+对简单语言进行运算产生复杂语言。
+
+**封闭性：**如果任意的属于某一种语言类的一个或者多个语言在某一个特定运算下得到的语言仍然是同类的语言，则我们称该语言类对于该运算具有封闭性。
+
+**有效封闭性：**根据一个或者多个语言的文法，如果可以构造出给定运算下的同类语言的文法则称该语言对于这种运算是有效封闭的。
+
+本质：文法的构造
+
+存在文法$G_1$和$G_2$，$L_1=L(G_1),L_2=L(G_2)$，需要构造文法$G$使得$L(G)$是对于$L_1,L_2$进行某种运算之后得到的语言。
+
+（1）联合运算：$L_1,L_2$之间的联合运算为：
+$$
+L_1\cup L_2=\{\omega |\omega \in L_1\text{ or }\omega \in L_2\}
+$$
+（2）连接运算：$L_1,L_2$之间的连接运算为：
+$$
+L_1L_2=\{\omega|\omega=\omega_1\omega_2,\omega_1\in L_1,\omega_2\in L_2\}
+$$
+（3）迭代运算：语言$L_1$的迭代运算为：
+$$
+L_1^\ast =\{\omega|\omega=\omega_1\omega_2\cdots\omega_m,\omega_i\in L_1,m\geq 0\}=\cup L_1^n,n\geq 0
+$$
+$i(i=0,1,2,3)$型语言对于联合，连接和迭代运算都是有效封闭的。
+
+假设：产生$L_1$的文法是：$G_1=(\Sigma_1,V_1,S_1,P_1)$，产生$L_2$的文法是：$G_2=(\Sigma_2,V_2,S_2,P_2)$，同时还假设$\Sigma_1\cap \Sigma_2=\empty,V_1\cap V_2=\empty,S\notin V_1,S\notin V_2$. 设置$\Sigma=\Sigma_1\cup \Sigma_2,V=V_1\cup V_2\cup \{S\}$.
+
+构造$G_3=(\Sigma,V,S,P_3)$. 其中$P_3=\{S\rightarrow S_1\}\cup \{S\rightarrow S_2\}\cup P_1\cup P_2$. 
+
+对于$i=0,1,2$，如果$G_1,G_2$是$i$型文法，则$G_3$依然。显然$L(G_3)=L(G_1)\cup L(G_2)$, 0,1,2型语言类对于联合运算是封闭的。对于3型而言，构造文法$G_4=(\Sigma,V,S,P_4)$其中$P_4$为$\{S\to \alpha|S_1\to \alpha在P_1中\}\cup\{S\to \beta|S_2\to \beta在P_2中\}\cup P_1\cup P_2$. 则$G_4$是RG，因此3型语言对于联合运算是封闭的。
+
+对于连接运算构造的方式，构造$G_5$, 其中$P_5=\{S\to S_1S_2\}\cup P_1\cup P_2$. 对于$i=0,1,2$型语言，连接运算封闭。
+
+3型文法，构造$G_6=(\Sigma,V_1\cup V_2,S_1,P_6)$. 其中$P_6$为：$\{A\to \omega B|A\to \omega B在P_1中\}\cup \{A\to \omega S_2|A\to \omega B在P_1中\}\cup P_2$
+
+<font color=red>关于不同类型文法对于三种运算规则的封闭性的证明留到考前复习之前过一遍，现在不详述。</font>
+
+**结论：**
+
+不论字母表$\Sigma_1\cap\Sigma_2=\empty$或者$\Sigma_1\cap \Sigma_2\neq \empty$（包括$\Sigma_1=\Sigma_2$）四类语言对于联合，连接以及迭代运算都是有效封闭的。
+
+右线性语言对于补和交运算是封闭的；上下文无关语言对于补和交运算不封闭。
+
+上下文无关语言对于置换映射有效封闭。
+
+#### 正则表达式和正则集
+
+**定义：**正则集的定义：$L$是字母表$\Sigma$上的语言，（1）如果$L$是有限的，那么$L$是正则的；（2）如果$L$能够通过下列运算递归产生：如果$L_1,L_2$正则，且$L=L_1\cup L_2$；如果$L_1,L_2$正则，且$L=L_1 L_2$；如果$L_1$正则，且$L=L_1^\ast$那么我们认为$L$也是正则的。如果一个语言是正则的，那么该语言也称为正则集。
+
+正则表达式$R$和它所表达的正则集$S(R)$，$\empty$是正则表达式，$S(\empty)=\empty$.
+
+如果$R_1,R_2$均为正则表达式，则$(R_1+R_2)$是正则表达式，$S(R_1+R_2)=S(R_1)\cup S(R_2)$.
+
+如果$R_1,R_2$均为正则表达式，则$(R_1R_2)$是正则表达式，$S(R_1R_2)=S(R_1) S(R_2)$.
+
+如果$R$是正则表达式，则$(R)^\ast$是正则表达式，$S((R)^\ast)=(S(R))^\ast$
+
+正则表达式$(a+b)^\ast$代表正则集: $\{a,b\}^\ast$
+
+正则表达式$a(b+c)^\ast$代表正则集: $\{\omega|\omega以a开头的b,c组成的任意串\}$
+
+对于每个正则集，至少能够找到表示该正则集的一个正则表达式；对于每一个正则表达式都唯一地表示一个正则集。
+
+**例题：**正则表达式$(a+b)^2$代表语言：$\{aa,ab,ba,bb\}$.
+
+**例题：**正则表达式$(a+b)(a+b)^\ast(a+b)$代表语言：$\{\omega|\omega\in \{a,b\}^+,且\omega长度至少为2\}$.
+
+**例题：**正则表达式$a(a+b+c)^\ast a+b(a+b+c)^\ast b+c(a+b+c)^\ast c$代表语言：
+
+$\{\omega|\omega\in \{a,b,c\}^+,且\omega中最后一个字母与第一个字母相同,|\omega|\geq 2\}$.
+
+**例题：**$\{\omega|\omega\in \{a,b\}^+,且\omega中至少包含2个a和一个b\}$的正则表达式为：
+
+$(R)^\ast a(R)^\ast a(R)^\ast b(R)^\ast+(R)^\ast a(R)^\ast b(R)^\ast a(R)^\ast+(R)^\ast b(R)^\ast a(R)^\ast a(R)^\ast$
+
+一个3型语言，从文法角度称之为右线性语言；从运算的角度而言称之为正则语言。
 
