add assignment-4 for Academic english for master

--- a/Design-and-Analysis-of-Algorithms/第二章.md
+++ b/Design-and-Analysis-of-Algorithms/第二章.md
@@ -2,7 +2,7 @@
 
 ---
 
-#### 算法复杂性分析
+#### 2.1 算法复杂性分析
 
 算法分析是对一个算法需要多少计算时间以及存储空间做定量的分析。
 
@@ -178,3 +178,28 @@ $f_6(n)=3\log (2^n) + \log \log n$
 $f_7(n)=2^{n\log n}+\log^n n$
 
 答案：$4<6<3<1<2<5<7$.
+
+---
+
+#### 2.2 Greedy Algorithms 
+
+##### 找零钱问题（Coin Changing）
+
+<img src="pics/2-1.png" alt="找零钱" style="zoom:60%;" />
+
+给出Cashier's Algorithm
+
+<img src="pics/2-2.png" alt="cashier's algorithm" style="zoom:67%;" />
+
+找零钱算法对于美国coins的问题上可以得到最优解，因为美国零钱的性质比较特殊。对于一些一般性的问题上来说，这个算法就不是最优解的算法。
+
+美国零钱的种类如下：
+
+<img src="pics/2-3.png" alt="US零钱种类" style="zoom: 67%;" />
+
+下面证明找零钱的贪心算法对于这个特殊情况下是最优的，在证明之前首先给出一些性质。
+
+（1）pennies的数量一定小于等于4个；（2）nickels的数量一定小于等于1个；（3）quarters的数量一定小于等于3个；（4）nickels和dimes的数量之和一定小于等于2.
+
+*Proof.* 假设在$c_k\leq x < c_{k+1}$的时候贪心选择了$c_k$，下面我们想办法证明最优解也一定选择了$c_k$. 假设最优解没有选择$c_k$，那么最优解一定在$c_1,\cdots,c_{k-1}$之中选择足够多数量的coins来达到$x$. 下面给出表格证明无法做到这一点。
+
