add new notes for design and analysis for algorithm

--- a/Design-and-Analysis-of-Algorithms/第二章.md
+++ b/Design-and-Analysis-of-Algorithms/第二章.md
@@ -201,5 +201,59 @@ $f_7(n)=2^{n\log n}+\log^n n$
 
 （1）pennies的数量一定小于等于4个；（2）nickels的数量一定小于等于1个；（3）quarters的数量一定小于等于3个；（4）nickels和dimes的数量之和一定小于等于2.
 
-*Proof.* 假设在$c_k\leq x < c_{k+1}$的时候贪心选择了$c_k$，下面我们想办法证明最优解也一定选择了$c_k$. 假设最优解没有选择$c_k$，那么最优解一定在$c_1,\cdots,c_{k-1}$之中选择足够多数量的coins来达到$x$. 下面给出表格证明无法做到这一点。
+*Proof.* 假设在$c_k\leq x < c_{k+1}$的时候贪心选择了$c_k$，下面我们想办法证明最优解也一定选择了$c_k$. 假设最优解没有选择$c_k$，那么最优解一定在$c_1,\cdots,c_{k-1}$之中选择足够多数量的coins来达到$x$. 下面给出表格证明无法做到这一点（即既没有选择$c_k$同时也达到了最优结果）。
+
+<img src="pics/2-4.png" alt="最优解硬币数量比对" style="zoom:80%;" />
+
+因此这个问题就转换为了$x-c_k$的新问题上，不断进行规约我们可以发现最终由cashier's algorithm得到的结果就是最优解。
+
+##### 区间规划问题
+
+工作$j$的开始时间为$s_j$, 结束时间为$f_j$.
+
+如果两个工作不交叉则我们认为这两个工作是相容的。
+
+目标：寻找一个最大的相容的工作子集
+
+<img src="pics/2-5.png" alt="区间规划问题" style="zoom:80%;" />
+
+解决这个问题的算法：最早结束时间优先算法
+
+<img src="pics/1-6.png" alt="最早结束时间优先算法" style="zoom:80%;" />
+
+我们可以知道的一些结论，首先这个算法的时间复杂度为$O(n\log n)$.
+
+找到最后一个被添加到$S$集合中的工作$j^\ast$. 我们会发现当且仅当$s_j\geq f_{j^\ast}$时工作$j$才能够被添加到集合中去。
+
+我们还知道最早结束时间算法对于这个问题来说是最优解，那么其他的一些将工作进行一定次序排列的方式是否能够达到最优解呢？这里给出一部分反例。
+
+<img src="pics/2-7.png" alt="反例" style="zoom:80%;" />
+
+最后我们还会发现最早结束时间与最晚开始时间的排序是等价的。
+
+给出最早结束时间优先算法最优性的证明。
+
+*Proof.* 使用反证法进行证明。假设贪心不是最优的，考虑接下来会发生什么。定义$i_1,i_2,\cdots,i_k$表示的是根据贪心算法选出来的工作；定义$j_1,j_2,\cdots,j_m$表示最优解下选择的工作，同时我们认为$i_1=j_1,i_2=j_2,\cdots,i_r=j_r$. $r$是满足这个条件的最大的值。
+
+<img src="pics/2-8.png" alt="最早结束时间优先算法的最优性证明" style="zoom:80%;" />
+
+（在带权的工作安排问题上，最早结束时间优先的算法就不会是最优算法）
+
+##### 区间划分问题
+
+假设有一节课$j$的开始时间为$s_j$，结束时间为$f_j$.
+
+目标：找到能够安排下这些课程的最小数量的教室数。（不能出现冲突）
+
+<img src="pics/2-9.png" style="zoom:80%;" />
+
+<img src="pics/2-10.png" style="zoom:80%;" />
+
+最早开始时间优先算法：
+
+<img src="pics/2-11.png" alt="最早开始时间优先算法" style="zoom:80%;" />
+
+结论：最早开始时间优先算法的时间复杂度为$O(n\log n)$.
+
+*Proof.* 将所有的教室存储在一个优先队列中，优先队列的排序键值为该教室最后一个课程的结束时间。为了判断$j$是否和一些教室相容，将$s_j$和优先队列中的最小值教室进行对比。如果能够加入则将$j$加入到$k$同时将$k$号教室的键值提升到$f_j$. 对于这个优先队列来说需要的处理时间为$O(n)$，而关于排序的时间复杂度为$O(n\log n)$.
 
