--- a/Design-and-Analysis-of-Algorithms/第二章.md
+++ b/Design-and-Analysis-of-Algorithms/第二章.md
@@ -257,3 +257,63 @@ $f_7(n)=2^{n\log n}+\log^n n$
 
 *Proof.* 将所有的教室存储在一个优先队列中，优先队列的排序键值为该教室最后一个课程的结束时间。为了判断$j$是否和一些教室相容，将$s_j$和优先队列中的最小值教室进行对比。如果能够加入则将$j$加入到$k$同时将$k$号教室的键值提升到$f_j$. 对于这个优先队列来说需要的处理时间为$O(n)$，而关于排序的时间复杂度为$O(n\log n)$.
 
+（每次有新的课程加入进来时，我们选择的是结束时间最早的那个教室，判断新的课程是否能够容纳）
+
+下面证明这个算法的最优性：
+
+首先定义一个depth的概念：一个开区间的深度表示的是包含任何给定点的区间的最大数量。
+
+我们不难发现：number of classrooms needed $\geq$ depth；同时需要的最少数量的教室数总是会等于depth的 ，而最早开始时间优先算法得到的结果一定是一个教室数量等于depth的结果。
+
+给出一个demo：
+
+* 首先进行排序：
+
+  <img src="pics/2-12.png" alt="最早开始时间排序" style="zoom:67%;" />
+
+* 依次将课程放入可以相容的教室
+
+  <img src="pics/2-13.png" alt="放入a课程" style="zoom:67%;" />
+
+  <img src="pics/2-14.png" alt="放入b课程" style="zoom:67%;" />
+
+  <img src="pics/2-15.png" alt="放入c课程" style="zoom:67%;" />
+
+  <img src="pics/2-16.png" alt="放入d课程" style="zoom:67%;" />
+
+  <img src="pics/2-17.png" alt="放入e课程" style="zoom:67%;" />
+  $$
+  \vdots\\
+  \vdots
+  $$
+  <img src="pics/2-18.png" alt="last one for finish" style="zoom:67%;" />
+
+* 完成整个区间安排算法。
+
+**Theorem.** 最早开始时间优先算法是最优的。
+
+<font color=red>（这个没太看懂还需要回头再仔细琢磨琢磨）</font>
+
+<img src="pics/2-19.png" alt="证明最早开始时间优先算法最优性" style="zoom:67%;" />
+
+##### 最小延迟调度问题 Scheduling to Minimizing Lateness
+
+基本的描述：
+
+- 单一资源一次处理一个工作。
+- 工作$j$要求$t_j$个单元的处理时间同时要求在$d_j$时间到期结束（最晚的结束时间）。
+- 假设$j$的开始时间为$s_j$则其结束时间为$f_j=s_j+t_j$.
+- 延迟时间等于$\ell_j=\max\{0,f_j-d_j\}$.
+- 目标：安排完所有的工作同时最小化最大的延迟：$L=\max_j \ell_j$.
+
+Example:
+
+<img src="pics/2-20.png" alt="时间表" style="zoom:67%;" />
+
+<img src="pics/2-21.png" alt="安排工作计划" style="zoom:67%;" />
+
+**Minimizing lateness: earliest deadline first**
+
+<img src="pics/2-22.png" alt="最早ddl优先算法" style="zoom:67%;" />
+
+<img src="pics/2-23.png" alt="最优解" style="zoom:67%;" />
