add new study notes

--- a/Design-and-Analysis-of-Algorithms/第二章.md
+++ b/Design-and-Analysis-of-Algorithms/第二章.md
@@ -317,3 +317,72 @@ Example:
 <img src="pics/2-22.png" alt="最早ddl优先算法" style="zoom:67%;" />
 
 <img src="pics/2-23.png" alt="最优解" style="zoom:67%;" />
+
+首先我们知道存在一个最优调度没有空闲时间；其次最早结束时间优先算法是没有空余时间的。
+
+定义**inversion**表示一对工作$i,j$，其中$i$的结束时间早于$j$但是$j$安排在了$i$的前面。我们可以发现最早结束时间优先是唯一的没有空闲时间同时没有**inversion**的算法。
+
+如果一个没有空闲时间的调度存在一个inversion的话，那么他一定存在一个相邻的inversion.
+
+*Proof.*  定义$i-j$是一个最近的inversion，假设$k$是在$j$右边相邻的工作，第一种情况，如果$j>k$的话，那么$j-k$就是这样一对inversion；第二种情况，如果$j<k$那么$i-k$是一对更加临近的inversion，因为$i<j<k$.
+
+下面引入一个关键的claim：如果我们交换了两个邻接的倒序的工作，那么我们可以知道inversion的数量会减少1，同时我们不会增加最大延迟值。
+
+**Theorem.** 最早结束时间优先算法$S$一定是最优的。
+
+*Proof.* 假设定义$S^\ast$是具有最少inversions的最优调度，可以假设$S^\ast$是没有空闲时间的，如果$S^\ast$没有inversions，那么我们可以知道$S=S^\ast$. 第二种情况如果$S^\ast$存在inversion，那么我们可以认为$i-j$是一个邻接的inversion，我们交换$i,j$的顺序可以使得inversion的数量降低1同时不会增加最大延迟，但是这样的话就于我们的最少inversion的假设冲突，因此不成立，综上我们可以认为$S$一定是最优的算法。
+
+##### 证明贪心算法的策略
+
+**贪心算法保持最好的结果：**我们可以证明在每一个贪心选择之后得到的结果都是至少和其他任何的算法得到的结果是一样好的。
+
+**结构分析：**找到一个简单的结构化的界限，这个界限使得每一个可能的解都有一个确定的值，然后称述你的算法每一步达到的解都是达到了最好的界限。
+
+**交换策略：**逐步地将任意的一个解向着greedy算法靠近同时不会改那个解的性质。
+
+其他的一些贪心算法：Gale-Shapley, Kruskal, Prim, Dijkstra, Huffman等等
+
+---
+
+#### 2.3 Divide and Conquer
+
+分治递归算法的基本思路：
+
+- 将问题划分为相同种类的子问题
+- 递归地求解每一个子问题
+- 最后将所有的子问题的解合并得到整个问题的解
+
+暴力求解算法时间复杂度为：$O(n^2)$; 使用分治递归算法的时间复杂度：$O(n\log n)$.
+
+##### Counting inversions
+
+匹配两个人之间的逆序数量。假设你排了$n$首歌曲。现在音乐系统希望你去寻找到一个跟你相似的音乐品味的人。
+
+相似性度量使用的是两个rankings之间的逆序数量。给出一个范例：
+
+<img src="pics/2-24.png" alt="逆序对数量问题" style="zoom:67%;" />
+
+逆序对的定义是：如果对于两首歌$i,j$，如果$i<j$，但是存在$a_i>a_j$.
+
+我们会发现这两个rankings之间存在两个逆序对，一个是3-2，另一个是4-2.
+
+如果使用暴力解法我们可以知道时间复杂度为$\Theta(n^2)$.
+
+假如使用分治递归的方法，如何考虑这个问题：
+
+1. 首先将这个list分为两个部分：$A,B$.
+2. 其次在每个list中递归地去数存在的inversions的数量
+3. 数inversion $(a,b)$，其中$a\in A,b\in B$的数量
+4. 返回所有的逆序的数量
+
+如何去计算inversion $(a,b)$，其中$a\in A,b\in B$的数量？<font color=red>如果是有序的数组就很好计算了</font>
+
+首先对$A$和$B$分别进行排序，然后对于每一个$b\in B$我们使用二分搜索的方式在$A$中寻找有多少个$A$中的元素比$b$更大。
+
+算法的基本流程：
+
+input: List $L$.
+
+output: Number of inversions in $L$ and $L$ in sorted order.
+
+<img src="pics/2-25.png" alt="逆序对分治递归算法" style="zoom:67%;" />
